--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "express": "^4.17.1",
-        "mongoose": "^5.11.15"
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.11.15",
+        "validator": "^13.5.2"
     },
     "devDependencies": {
         "env-cmd": "^10.1.0",
