--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.15",
+        "mongoose-paginate": "^5.0.3",
         "validator": "^13.5.2"
     },
     "devDependencies": {
